# cipher_Baring_Francis

./: README.md
cipher_fb2493/: CHANGELOG.md  HW7_Francis_Baring_fb2493.ipynb  README.md  pyproject.toml
cipher_fb2493/cipher_fb2493/: CONTRIBUTING.md  pyproject.toml
cipher_fb2493/cipher_fb2493/docs/: Makefile  conf.py  make.bat
cipher_fb2493/cipher_fb2493/src/cipher_fb2493/: __init__.py
cipher_fb2493/docs/: example.ipynb
cipher_fb2493/src/cipher_fb2493/: __init__.py  cipher_fb2493.py
cipher_fb2493/tests/: test_cipher_fb2493.py
