[tool.poetry]
name = "cipher_fb2493"
version = "0.1.0"
description = "A package to encrypt and decrypt a string of alphabetic characters."
authors = ["Francis Baring"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
